force-app/main/default/objects/Legal_Entity__c/fields/Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder__c</fullName>
    <label>Account Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>