force-app/main/default/objects/Legal_Entity__c/fields/Account_Name_Flat_Cost__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Flat_Cost__c</fullName>
    <description>Cheque in Favor of - for Payment of Flat Cost</description>
    <label>Account Name (Flat Cost)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>