force-app/main/default/objects/Legal_Entity__c/fields/Account_Number_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Other_Charges__c</fullName>
    <label>Account Number (Other Charges)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>