force-app/main/default/objects/Legal_Entity__c/fields/Accountnumber_with_00__c.field-meta.xml
<CustomField>
    <fullName>Accountnumber_with_00__c</fullName>
    <formula>LPAD(  Accountnumber_with_00_text__c , 15,&apos;0&apos; )</formula>
    <label>Accountnumber with 00</label>
    <type>Text</type>
</CustomField>