force-app/main/default/objects/Legal_Entity__c/fields/Accountnumber_with_00_text__c.field-meta.xml
<CustomField>
    <fullName>Accountnumber_with_00_text__c</fullName>
    <formula>TEXT( Account_Number_Flat_Cost__c )</formula>
    <label>Accountnumber with 00 text</label>
    <type>Text</type>
</CustomField>