force-app/main/default/objects/Legal_Entity__c/fields/Arabic_Bank_Name_Flat_Cost__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Bank_Name_Flat_Cost__c</fullName>
    <label>Arabic Bank Name (Flat Cost)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>