force-app/main/default/objects/Legal_Entity__c/fields/Bank_Name_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Other_Charges__c</fullName>
    <label>Bank Name (Other Charges)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>