force-app/main/default/objects/Legal_Entity__c/fields/Bank_Name_Other_Charges_Tax__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Other_Charges_Tax__c</fullName>
    <label>Bank Name (Other Charges Tax)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>