force-app/main/default/objects/Legal_Entity__c/fields/Branch_Name_Other_Charges_Tax__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name_Other_Charges_Tax__c</fullName>
    <label>Branch Name(Other Charges Tax)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>