force-app/main/default/objects/Legal_Entity__c/fields/Developer_ID__c.field-meta.xml
<CustomField>
    <fullName>Developer_ID__c</fullName>
    <label>Developer / ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>