force-app/main/default/objects/Legal_Entity__c/fields/Favouring__c.field-meta.xml
<CustomField>
    <fullName>Favouring__c</fullName>
    <label>Favouring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>