force-app/main/default/objects/Legal_Entity__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GSTIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>