force-app/main/default/objects/Legal_Entity__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <label>IBAN (Flat Cost)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>