force-app/main/default/objects/Legal_Entity__c/fields/IBAN_Tax__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Tax__c</fullName>
    <label>IBAN (Tax)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>