force-app/main/default/objects/Legal_Entity__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Legal_Entity__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Parent Legal Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>Legal Entities</relationshipLabel>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>