force-app/main/default/objects/Legal_Entity__c/fields/MICR_Code_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>MICR_Code_Other_Charges__c</fullName>
    <label>Swift Code (Other Charges)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>