force-app/main/default/objects/Legal_Entity__c/fields/Project_Name_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_ID__c</fullName>
    <label>Project Name / ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>