force-app/main/default/objects/Legal_Entity__c/fields/RDS_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>RDS_Company_Code__c</fullName>
    <label>Company Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>