force-app/main/default/objects/Legal_Entity__c/fields/RDS_PAN_No__c.field-meta.xml
<CustomField>
    <fullName>RDS_PAN_No__c</fullName>
    <label>PAN No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>