force-app/main/default/objects/Legal_Entity__c/fields/RDS_Phone__c.field-meta.xml
<CustomField>
    <fullName>RDS_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>