force-app/main/default/objects/Legal_Entity__c/fields/RDS_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>RDS_Pin_Code__c</fullName>
    <label>Pin Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>