force-app/main/default/objects/Legal_Entity__c/recordTypes/Child_Legal_Entity.recordType-meta.xml
<RecordType>
    <fullName>Child_Legal_Entity</fullName>
    <active>true</active>
    <label>Child Legal Entity</label>
</RecordType>