force-app/main/default/objects/Legal_Entity__c/recordTypes/Legal_Entity.recordType-meta.xml
<RecordType>
    <fullName>Legal_Entity</fullName>
    <active>true</active>
    <label>Parent Legal Entity</label>
</RecordType>