force-app/main/default/objects/Legal_Entity__c/validationRules/Service_Tax_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Tax_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(RDS_Service_Tax_No__c) &gt;15||LEN(RDS_Service_Tax_No__c) &lt;15</errorConditionFormula>
    <errorDisplayField>RDS_Service_Tax_No__c</errorDisplayField>
    <errorMessage>Service Tax must be 15 digit</errorMessage>
</ValidationRule>