force-app/main/default/objects/Legal_Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Developer_ID__c</columns>
    <columns>Project_Name_ID__c</columns>
    <columns>Bank_Name_Flat_Cost__c</columns>
    <columns>Account_Holder__c</columns>
    <columns>RDS_Address1__c</columns>
    <columns>Account_Number_Flat_Cost__c</columns>
    <columns>IBAN__c</columns>
    <columns>MICR_Code_Flat_Cost__c</columns>
    <columns>Favouring__c</columns>
    <columns>Accountnumber_with_00__c</columns>
    <columns>Accountnumber_with_00_text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>